<resources>
    <string name="app_name">Big5 Personality Diagnostic</string>

    <string name="fragment_question_questionNum">Question</string>
    <string name="fragment_question_radio1">VERY ACCURATE</string>
    <string name="fragment_question_radio2">MODERATELY ACCURATE</string>
    <string name="fragment_question_radio3">NEITHER INACCURATE NOT ACCURATE</string>
    <string name="fragment_question_radio4">MODERATELY INACCURATE</string>
    <string name="fragment_question_radio5">VERY INACCURATE</string>
    <string name="fragment_question_prev">Prev</string>
    <string name="fragment_question_next">Next</string>
    <string name="fragment_question_progress">Progress:</string>
    <string name="activity_main_again_exit">Press again to exit.</string>
    <string name="activity_main_questions">Questions</string>
    <string name="activity_main_github">Open to Github</string>
    <string name="activity_main_license">Open Source Libraries</string>
    <string name="activity_main_maker">Who make this app?</string>
    <string name="activity_main_help">Help Guide</string>
    <string name="fragment_question_submit">Submit</string>
    <string name="util_storage_dialog">Analyzing..</string>
    <string name="activity_result_title">Analyze Result</string>

    <string name="question01">1. I am the life of the party.</string>
    <string name="question02">2. I sympathize with others\' feelings.</string>
    <string name="question03">3. I get chores done right away.</string>
    <string name="question04">4. I have frequent mood swings.</string>
    <string name="question05">5. I have a vivid imagination.</string>
    <string name="question06">6. I don\'t talk a lot.</string>
    <string name="question07">7. I am not interested in other people\'s problems.</string>
    <string name="question08">8. I often forgot to put things back in their proper place.</string>
    <string name="question09">9, 1 am relaxed most of the time.</string>
    <string name="question10">10. I am not interested in abstract ideas.</string>
    <string name="question11">11. I talk to a lot of different people at parties.</string>
    <string name="question12">12. I feel others\' emotions.</string>
    <string name="question13">13. I like order.</string>
    <string name="question14">14. I get upset easily.</string>
    <string name="question15">15. I have difficulty understanding abstract ideas.</string>
    <string name="question16">16. I kiaep in the background.</string>
    <string name="question17">17. I am not really interested in others.</string>
    <string name="question18">18. I make a mess of things.</string>
    <string name="question19">19. I seldom feel blue.</string>
    <string name="question20">20. I do not have a good imagination.</string>
    <string name="actvity_result_save">Save</string>
    <string name="activity_result_share">Share</string>
    <string name="activity_result_saved_gallery">Saved to Gallery</string>
    <string name="activity_result_share_intent">Share Result using..</string>
    <string name="activity_result_gallery_scanned">Scanned Gallery</string>
    <string name="activity_maker_title">Who make this App?</string>
    <string name="activity_result_shape_change">Toggle</string>
    <string name="fragment_question_notcheck">Check the Answer</string>
    <string name="storage_question_load_temped">Loaded Temp Data.</string>
    <string name="activity_main_exit_question">Are you exit Big5?</string>
    <string name="activity_main_ok">OK</string>
    <string name="activity_main_no">NO</string>
    <string name="activity_result_mail">Mail</string>
    <string name="dialog_mail_save">Save</string>
    <string name="dialog_mail_exit">Exit</string>
    <string name="dialog_mail_check">Save ID</string>
    <string name="dialog_mail_content">Enter the GMail Account</string>
    <string name="dialog_mail_sending">Sending..</string>
    <string name="activity_result_message_1">Enter ID or Password</string>
    <string name="activity_result_message_2">Some Error Expected.</string>
    <string name="activity_result_message_0">Succeed send Email.</string>
    <string name="activity_CANOE_title">What\'s the CANOE?</string>

</resources>
