<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_question_questionNum"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/questionText"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dip" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionGroup1"
        android:layout_below="@id/questionText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/questionText"
        android:layout_alignStart="@+id/questionText"
        android:layout_marginRight="10dip">

        <RadioButton
            android:id="@+id/questionRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_question_radio1"
            android:checked="true" />

        <RadioButton
            android:id="@+id/questionRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_question_radio2"
            android:checked="false" />

        <RadioButton
            android:id="@+id/questionRadio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_question_radio3"
            android:checked="false" />

        <RadioButton
            android:id="@+id/questionRadio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_question_radio4"
            android:checked="false" />

        <RadioButton
            android:id="@+id/questionRadio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_question_radio5"
            android:checked="false" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#0097A7">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_question_prev"
            android:id="@+id/questionPrev"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#0097A7"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_question_next"
            android:id="@+id/questionNext"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#0097A7"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fragment_question_progress"
            android:id="@+id/questionProgress"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>