<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/dialog_message">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_mail_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dip"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/mail_email"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dip" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/mail_password"
        android:layout_below="@+id/mail_email"
        android:layout_alignLeft="@+id/mail_email"
        android:layout_alignStart="@+id/mail_email"
        android:layout_alignRight="@+id/mail_email"
        android:layout_alignEnd="@+id/mail_email" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_mail_check"
        android:id="@+id/saveId"
        android:layout_below="@+id/mail_password"
        android:layout_alignLeft="@+id/mail_password"
        android:layout_alignStart="@+id/mail_password"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_mail_save"
        android:id="@+id/saveButton"
        android:layout_below="@+id/saveId"
        android:layout_alignRight="@+id/mail_password"
        android:layout_alignEnd="@+id/mail_password"
        android:layout_marginBottom="10dip"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_mail_exit"
        android:id="@+id/exitButton"
        android:layout_alignTop="@+id/saveButton"
        android:layout_toLeftOf="@+id/saveButton"
        android:layout_toStartOf="@+id/saveButton"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:textColor="#000000" />
</RelativeLayout>